fix: added back in escape close function to the overlay in overlay.js refactor: removed duplicate event listener for overlay click in overlay.jsx refactor: app now covers the entire page in app.jsx/app.css

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,6 @@
 .app {
+  box-sizing: border-box;
+  height: 100vh;
   margin: 0px auto;
   padding: 32px 40px 24px;
   max-width: 1360px;
